test/corpus/gnu_extensions.txt
==================
GNU extended commands and optional arguments
==================
F
Q
Q42
Q 7
1Q 7
R input data
T
T done
v
v 4.0.5
W output data
z
e
e printf 'ok'; # shell text
q23
q 24
l80
l 81

---

(script
  (command_list
    (command
      body: (file_name_command))
    (separator)
    (command
      body: (silent_quit_command))
    (separator)
    (command
      body: (silent_quit_command
        status: (exit_status)))
    (separator)
    (command
      body: (silent_quit_command
        status: (exit_status)))
    (separator)
    (command
      addresses: (address
        (line_number_address))
      body: (silent_quit_command
        status: (exit_status)))
    (separator)
    (command
      body: (read_line_command
        file: (file_argument)))
    (separator)
    (command
      body: (test_failure_command))
    (separator)
    (command
      body: (test_failure_command
        label: (label)))
    (separator)
    (command
      body: (version_command))
    (separator)
    (command
      body: (version_command
        version: (version_argument)))
    (separator)
    (command
      body: (write_first_line_command
        file: (file_argument)))
    (separator)
    (command
      body: (clear_command))
    (separator)
    (command
      body: (execute_command))
    (separator)
    (command
      body: (execute_command
        command: (shell_command)))
    (separator)
    (command
      body: (quit_command
        status: (exit_status)))
    (separator)
    (command
      body: (quit_command
        status: (exit_status)))
    (separator)
    (command
      body: (list_command
        width: (line_wrap_length)))
    (separator)
    (command
      body: (list_command
        width: (line_wrap_length)))
    (separator)))

==================
GNU two-address command forms
==================
1,2=
1,2l 80
1,2F
1,2T done
1,2v 4.0
1,2z
1,2a append range
1,2i insert range
1,2r read range
1,2e echo range
1,2R read-lines
1,2W write-first

---

(script
  (command_list
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (line_number_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (list_command
        width: (line_wrap_length)))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (file_name_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (test_failure_command
        label: (label)))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (version_command
        version: (version_argument)))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (clear_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (append_command
        text: (text_block)))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (insert_command
        text: (text_block)))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (read_command
        file: (file_argument)))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (execute_command
        command: (shell_command)))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (read_line_command
        file: (file_argument)))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      body: (write_first_line_command
        file: (file_argument)))
    (separator)))

==================
GNU address forms and regex modifiers
==================
0~3p
50~0p
1~2p
1 ~ 2 p
1,+4p
1 , + 4 p
1,~5p
/re/,+2p
/re/,~4p
1 ~ 2 , ~ 5 ! p
0,/start/p
/x/IMp
/x/ I M p
\#route# M I p
0r prelude.txt

---

(script
  (command_list
    (command
      addresses: (address
        (periodic_address
          start: (line_number_address)
          step: (step_value)))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (periodic_address
          start: (line_number_address)
          step: (step_value)))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (periodic_address
          start: (line_number_address)
          step: (step_value)))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (periodic_address
          start: (line_number_address)
          step: (step_value)))
      body: (print_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (relative_address
          offset: (line_offset)))
      body: (print_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (relative_address
          offset: (line_offset)))
      body: (print_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (next_multiple_address
          multiple: (step_value)))
      body: (print_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (regex_address
            pattern: (regex
              body: (regex_content))))
        end: (relative_address
          offset: (line_offset)))
      body: (print_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (regex_address
            pattern: (regex
              body: (regex_content))))
        end: (next_multiple_address
          multiple: (step_value)))
      body: (print_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (periodic_address
            start: (line_number_address)
            step: (step_value)))
        end: (next_multiple_address
          multiple: (step_value)))
      negation: (negation)
      body: (print_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (regex_address
            pattern: (regex
              body: (regex_content)))))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (regex_address
          pattern: (regex
            body: (regex_content))
          flags: (regex_flags
            (ignore_case_flag)
            (multiline_flag))))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (regex_address
          pattern: (regex
            body: (regex_content))
          flags: (regex_flags
            (ignore_case_flag)
            (multiline_flag))))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (escaped_regex_address
          pattern: (regex
            body: (regex_content))
          flags: (regex_flags
            (multiline_flag)
            (ignore_case_flag))))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (line_number_address))
      body: (read_command
        file: (file_argument)))
    (separator)))

==================
GNU substitution modifiers
==================
s/a/b/I
s/a/b/I M m e p 2 g
s/a/b/e;p
s/a/b/ I M e p 2 g ; p
s/a/b/g w output file;#literal
s/x/\L&\E/
p

---

(script
  (command_list
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (ignore_case_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (ignore_case_flag)
          (multiline_flag)
          (multiline_flag)
          (execute_flag)
          (print_flag)
          (occurrence_flag)
          (global_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (execute_flag))))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (ignore_case_flag)
          (multiline_flag)
          (execute_flag)
          (print_flag)
          (occurrence_flag)
          (global_flag))))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (global_flag)
          (write_flag
            file: (file_argument)))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU labels semicolons and compact blocks
==================
:loop ; b loop ; t loop ; T loop ; p
b ; t ; T ; p
{ :inner ; b inner ; t inner ; T inner ; p; };d
{p}
{}
{{p};d}

---

(script
  (command_list
    (command
      body: (label_command
        label: (label)))
    (separator)
    (command
      body: (branch_command
        label: (label)))
    (separator)
    (command
      body: (test_command
        label: (label)))
    (separator)
    (command
      body: (test_failure_command
        label: (label)))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (branch_command))
    (separator)
    (command
      body: (test_command))
    (separator)
    (command
      body: (test_failure_command))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (block_command
        (command_list
          (command
            body: (label_command
              label: (label)))
          (separator)
          (command
            body: (branch_command
              label: (label)))
          (separator)
          (command
            body: (test_command
              label: (label)))
          (separator)
          (command
            body: (test_failure_command
              label: (label)))
          (separator)
          (command
            body: (print_command))
          (separator))))
    (separator)
    (command
      body: (delete_command))
    (separator)
    (command
      body: (block_command
        (command_list
          (command
            body: (print_command)))))
    (separator)
    (command
      body: (block_command))
    (separator)
    (command
      body: (block_command
        (command_list
          (command
            body: (block_command
              (command_list
                (command
                  body: (print_command)))))
          (separator)
          (command
            body: (delete_command)))))
    (separator)))

==================
GNU command whitespace and endings
==================
p   
q   
Q   
l   
b   
t   
T   
v   
e   
s/a/b/   
s/a/b/g   
s/a/b/   # comment
1 , 2 ! p
! # comment
{p   }
{p   ;}

---

(script
  (command_list
    (command
      body: (print_command))
    (separator)
    (command
      body: (quit_command))
    (separator)
    (command
      body: (silent_quit_command))
    (separator)
    (command
      body: (list_command))
    (separator)
    (command
      body: (branch_command))
    (separator)
    (command
      body: (test_command))
    (separator)
    (command
      body: (test_failure_command))
    (separator)
    (command
      body: (version_command))
    (separator)
    (command
      body: (execute_command))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (global_flag))))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (comment_command)
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address)))
      negation: (negation)
      body: (print_command))
    (separator)
    negation: (negation)
    (comment_command)
    (separator)
    (command
      body: (block_command
        (command_list
          (command
            body: (print_command)))))
    (separator)
    (command
      body: (block_command
        (command_list
          (command
            body: (print_command))
          (separator))))
    (separator)))

==================
GNU line-consuming arguments retain punctuation
==================
r input;#}
R input;#}
w output;#}
W output;#}
s/a/b/w substitution;#}
e echo one; echo two # }
a inline ; # }
i inline ; # }
c inline ; # }
{
  r file}
}
{
  e echo }
}
{
  a text}
}
p

---

(script
  (command_list
    (command
      body: (read_command
        file: (file_argument)))
    (separator)
    (command
      body: (read_line_command
        file: (file_argument)))
    (separator)
    (command
      body: (write_command
        file: (file_argument)))
    (separator)
    (command
      body: (write_first_line_command
        file: (file_argument)))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)
        flags: (substitute_flags
          (write_flag
            file: (file_argument)))))
    (separator)
    (command
      body: (execute_command
        command: (shell_command)))
    (separator)
    (command
      body: (append_command
        text: (text_block)))
    (separator)
    (command
      body: (insert_command
        text: (text_block)))
    (separator)
    (command
      body: (change_command
        text: (text_block)))
    (separator)
    (command
      body: (block_command
        (command_list
          (separator)
          (command
            body: (read_command
              file: (file_argument)))
          (separator))))
    (separator)
    (command
      body: (block_command
        (command_list
          (separator)
          (command
            body: (execute_command
              command: (shell_command)))
          (separator))))
    (separator)
    (command
      body: (block_command
        (command_list
          (separator)
          (command
            body: (append_command
              text: (text_block)))
          (separator))))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU text forms and backslash boundaries
==================
a\
first\
second
p
a\\
p
a\\\
continued
p
i same line
c
p

---

(script
  (command_list
    (command
      body: (append_command
        text: (text_block)))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (append_command
        text: (text_block)))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (append_command
        text: (text_block)))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (insert_command
        text: (text_block)))
    (separator)
    (command
      body: (change_command
        text: (text_block)))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU execute command backslash boundaries
==================
e\
echo one
p
e\\
p
e\\\
continued
p

---

(script
  (command_list
    (command
      body: (execute_command
        command: (shell_command)))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (execute_command
        command: (shell_command)))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (execute_command
        command: (shell_command)))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
GNU escaped newlines in delimited arguments
==================
/foo\
bar/p
\#route\
name#p
s/foo\
bar/baz/
y/a\
b/cd/
y/ab/c\
d/

---

(script
  (command_list
    (command
      addresses: (address
        (regex_address
          pattern: (regex
            body: (regex_content))))
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (escaped_regex_address
          pattern: (regex
            body: (regex_content))))
      body: (print_command))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (separator)
    (command
      body: (translate_command
        source: (translate_source)
        destination: (translate_destination)))
    (separator)
    (command
      body: (translate_command
        source: (translate_source)
        destination: (translate_destination)))
    (separator)))

==================
Invalid GNU quit address arity
==================
1,2q
p
1,2Q
p

---

(script
  (ERROR
    (address_range
      start: (address
        (line_number_address))
      end: (address
        (line_number_address))))
  (command_list
    (command
      body: (quit_command))
    (separator)
    (command
      body: (print_command))
    (separator)
    (ERROR
      (address_range
        start: (address
          (line_number_address))
        end: (address
          (line_number_address))))
    (command
      body: (silent_quit_command))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
Invalid GNU missing line arguments
==================
r
p
R
p
w
p
W
p
s/a/b/w
p

---

(script
  (ERROR)
  (command_list
    (separator)
    (command
      body: (print_command))
    (separator)
    (ERROR)
    (separator)
    (command
      body: (print_command))
    (separator)
    (ERROR)
    (separator)
    (command
      body: (print_command))
    (separator)
    (ERROR)
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (substitute_command
        pattern: (regex
          body: (regex_content))
        replacement: (replacement)))
    (ERROR)
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
Invalid GNU separator-less commands
==================
dp
p
{dp}
p

---

(script
  (ERROR
    (command
      body: (delete_command)))
  (command_list
    (command
      body: (print_command))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      body: (block_command
        (ERROR
          (command
            body: (delete_command)))
        (command_list
          (command
            body: (print_command)))))
    (separator)
    (command
      body: (print_command))
    (separator)))

==================
Invalid GNU shell command consumes the apparent block terminator
==================
{e echo}
p

---

(script
  (command_list
    (command
      body: (block_command
        (command_list
          (command
            body: (execute_command
              command: (shell_command)))
          (separator)
          (command
            body: (print_command))
          (separator))
        (MISSING "}")))))

==================
Invalid GNU address forms
==================
+2p
p
1~p
p
1,+p
p
1,~p
p

---

(script
  (ERROR)
  (command_list
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      addresses: (address
        (line_number_address))
      (ERROR)
      body: (print_command))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (relative_address
          offset: (line_offset
            (MISSING "line_number_address_token1"))))
      body: (print_command))
    (separator)
    (command
      body: (print_command))
    (separator)
    (command
      addresses: (address_range
        start: (address
          (line_number_address))
        end: (next_multiple_address
          multiple: (step_value
            (MISSING "line_number_address_token1"))))
      body: (print_command))
    (separator)
    (command
      body: (print_command))
    (separator)))
